# automission

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: vision.md
docs/assets/: architecture.html
docs/specs/: acceptance-graph.md  agent-backend.md  agent-loop.md  cli.md  merge-protocol.md  milestone-acceptance.md  planner.md  verifier.md
src/automission/: __init__.py  acceptance.py  cli.py  config.py  critic.py  daemon.py  db.py  docker.py  events.py  executor.py  harness.py  llm.py  loop.py  merge.py  mission_log.py  models.py  orchestrator.py  planner.py  skills.py  verifier.py  workspace.py  worktree.py
src/automission/backend/: __init__.py  _helpers.py  claude.py  codex.py  gemini.py  mock.py  protocol.py
src/automission/structured_output/: __init__.py  _errors.py  claude.py  codex.py  factory.py  gemini.py  protocol.py
tests/: conftest.py  mock_helpers.py  test_acceptance.py  test_acceptance_graph.py  test_backend.py  test_backend_codex.py  test_backend_gemini.py  test_backend_helpers.py  test_cli.py  test_config.py  test_critic.py  test_daemon.py  test_daemon_integration.py  test_db.py  test_docker.py  test_e2e.py  test_e2e_real.py  test_events.py  test_executor.py  test_harness.py  test_llm.py  test_loop.py  test_merge.py  test_mission_log.py  test_models.py  test_orchestrator.py  test_planner.py  test_skills.py  test_structured_output.py  test_structured_output_codex.py  test_structured_output_gemini.py  test_verifier.py  test_workspace.py  test_worktree.py
tests/fixtures/m1-calculator/: ACCEPTANCE.md  goal.txt  verify.sh
tests/fixtures/m1-calculator/workspace/src/tests/: test_calc.py
tests/fixtures/m2-calculator-iterative/: ACCEPTANCE.md  goal.txt
tests/fixtures/m2-calculator-iterative/workspace/src/tests/: test_calc.py
